--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@prisma/client": "^6.9.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
@@ -18,7 +20,10 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
-    "jsonwebtoken": "^9.0.2"
+    "framer-motion": "^12.20.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
